traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:26: error: not found: value x
    x=x+1
    ^TraversalDiagonal:27: error: not found: value x
    while (x<=getMondeLargeur()-1) {
           ^TraversalDiagonal:28: error: not found: value x
      setPos(x,y)
             ^TraversalDiagonal:31: error: not found: value x
      x=x+1
      ^